fix some wrong sized images

--- a/src/css/cropper.css
+++ b/src/css/cropper.css
@@ -2,13 +2,13 @@
     outline: 2px solid;
 }
 .cropper-container{
-    min-width: 520px !important;
-    min-height: 420px !important;
+    width: 520px !important;
+    height: 420px !important;
 }
 
 #root .twoCards .cropper-container{
-    min-width: 520px !important;
-    min-height: 520px !important;
+    width: 520px !important;
+    height: 520px !important;
 }
 .cropper-wrap-box{
     display: none;
